[NIAD-3134] Enhance DocumentReferenceMapperTest.java to use findFirst()